--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta content="utf-8" http-equiv="encoding">
 
 <head>
+	<title>Hero Grapher</title>
 	<link rel="stylesheet" href="player-lookup.css" />
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
 </head>
