updated to have static vue file and updated heroes file

--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@ h2 {
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/lodash@4.13.1/lodash.min.js"></script>
-<script src="https://unpkg.com/vue"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios@0.12.0/dist/axios.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dygraph/2.1.0/dygraph.min.js"></script>
+<script src="lib/vue2.min.js"></script>
 <script src="smooth-plotter.js"></script>
 <script src="player-lookup.js"></script>
 <script src="heroes.js"></script>
